# sousaFX-rpi-scripts

./: .asoundrc  .gitignore  flucoma_pitch_osc.service  gamepad.cpp  gamepad.py  gamepad.service  oscserial.cpp  oscserial.py  oscserial.service  rnbo_to_osc.py
.github/: README.md
fluid_pitch/: CMakeLists.txt  README.md
fluid_pitch/src/: main.cpp
